--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoeApp">
+        <activity android:name=".UploadForm"></activity>
+        <activity android:name=".ShoeActivity" />
+        <activity android:name=".HomeActivity" />
         <activity android:name=".OnBoardingScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
