--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.shoeapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/select"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:hardwareAccelerated="true"
-        android:largeHeap="true"
         android:theme="@style/Theme.ShoeApp">
-        <activity android:name=".UploadForm"></activity>
+
+        <activity android:name=".DisplayActivity"></activity>
+        <activity android:name=".CreateAccount" />
+        <activity android:name=".ForgotPassword" />
+        <activity android:name=".Login" />
+        <activity android:name=".UploadForm" />
         <activity android:name=".ShoeActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".OnBoardingScreen">
